# ComicBooks_Bulk_Process_Images

./: .gitignore  .gitmodules  CLEANUP_SUMMARY.md  CMakeLists.txt  FEATURE_ADDITIONS_SUMMARY.md  README.md  Sleepers.html  TASKS.md  THUMBNAIL_VIEW_FEATURE.md  THUMBNAIL_VIEW_IMPLEMENTATION.md  TODO.md  TOGGLE_BROWSER_FEATURE.md  TOGGLE_IMPLEMENTATION.md  USER_GUIDE.md  comicer-agent.prompt.md  ebayscrape.js  import_gcd.py  launch.bat  launch.ps1  phased_grading_engine.py  specs2.txt  test.html
Templates/: eBay-category-Comics-listing-template-Nov-16-2025-16-22-58.csv
docs/: CODE_REVIEW.md  FOLDER_BROWSER_GUIDE.md  PROJECT_RESOURCES.md  README.md  SAM3_Fix_Instructions.md  Specs.md  TODO.md  VISUAL_GUIDE.md
frontend/: index.html  package-lock.json  package.json
frontend/src/: ComicGrader.jsx  main.jsx
src/: apiserver.cpp  apiserver.h  backendcontroller.cpp  backendcontroller.h  comicprocessor.cpp  comicprocessor.h  ebayexporter.cpp  ebayexporter.h  imageviewerwidget.cpp  imageviewerwidget.h  main.cpp  mainwindow.cpp  mainwindow.h  serviceapp.cpp  serviceapp.h  spreadsheetdialog.cpp  spreadsheetdialog.h
tests/: CMakeLists.txt  test_comicprocessor.cpp  test_ebaycsv.cpp  test_grading.py
